--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
    <h1>Je suis le goat sur cette planète</h1>
+   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione maiores, eligendi repellendus corrupti non modi corporis adipisci libero sint unde accusantium porro deserunt doloribus iusto ipsum saepe quia incidunt debitis!</p>
 </body>
 </html>
